# rust-benchmarks

./: .gitignore  Cargo.toml  README.md
benches/: benchmarks.rs
src/: algorithms.rs  data_structures.rs  lib.rs  parsing.rs  sorting.rs  string_operations.rs
