[package]
name = "rust-benchmarks"
version = "0.1.0"
edition = "2021"
authors = ["jakubbbdev"]
description = "A clean and well-structured Rust benchmarking project"

[dependencies]
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort" 